<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.detail.DetailMoviesActivity">
        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="180dp"
            android:layout_height="270dp"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/poster" />

        <TextView
            android:id="@+id/tv_item_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:padding="4dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toTopOf="@+id/img_poster"
            tools:text="Title" />

        <TextView
            android:id="@+id/title_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:padding="4dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/release"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_title"/>
        <TextView
            android:id="@+id/tv_item_release"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingStart="8dp"
            android:paddingBottom="8dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toBottomOf="@+id/title_release"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/title_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:padding="4dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/rating"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_release"/>
        <TextView
            android:id="@+id/tv_item_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingStart="8dp"
            android:paddingBottom="8dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toBottomOf="@+id/title_rating"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/title_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:padding="4dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/duration"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_rating"/>
        <TextView
            android:id="@+id/tv_item_duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingStart="8dp"
            android:paddingBottom="8dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toBottomOf="@+id/title_duration"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/title_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:padding="4dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/genre"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_duration"/>
        <TextView
            android:id="@+id/tv_item_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingStart="8dp"
            android:paddingBottom="8dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toBottomOf="@+id/title_genre"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/title_production"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="4dp"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_poster"
            tools:text="Production"/>
        <TextView
            android:id="@+id/tv_item_production"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:padding="4dp"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_production"/>

        <TextView
            android:id="@+id/title_actor"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="4dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/rating"
            app:layout_constraintStart_toEndOf="@id/title_production"
            app:layout_constraintTop_toBottomOf="@+id/img_poster"
            tools:text="Actor" />
        <TextView
            android:id="@+id/tv_item_actor"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:padding="4dp"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/tv_item_production"
            app:layout_constraintTop_toBottomOf="@+id/title_actor"/>

        <TextView
            android:id="@+id/title_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/overview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_production" />
        <TextView
            android:id="@+id/tv_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:padding="4dp"
            android:textSize="14sp"
            android:justificationMode="inter_word"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_overview"
            tools:text="Overview"
            tools:targetApi="o" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>