<resources>
    <string name="app_name">MyMovies</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="poster">Poster</string>
    <string name="release">Release</string>
    <string name="rating">Rating</string>
    <string name="duration">Duration</string>
    <string name="genre">Genre</string>
    <string name="overview">Overview</string>
    <string name="movies">MOVIES</string>
    <string name="tvshows">TV SHOWS</string>
    <string name="credit">Created by Ruli Gandari</string>
</resources>